<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<LinearLayout
		android:id="@+id/linearLayoutRoot"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/theme_3"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			>        <!--	TITLE -->
			<LinearLayout
				android:id="@+id/linearLayout"
				android:layout_width="380dp"
				android:layout_height="50dp"
				android:layout_marginTop="10dp"
				android:gravity="center"
				android:orientation="horizontal"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/form_enregistrer"
					android:textAlignment="center"
					android:textColor="@color/red"
					android:textSize="30sp"
					android:textStyle="bold"
					/>
			</LinearLayout>

			<!--  BODY  -->
			<androidx.cardview.widget.CardView
				android:id="@+id/card_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="20dp"
				android:layout_marginTop="20dp"
				android:layout_marginEnd="20dp"
				android:layout_marginBottom="20dp"
				app:cardCornerRadius="15dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"

				app:layout_constraintTop_toBottomOf="@+id/linearLayout"
				>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/theme_1"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="10dp"
					>

					<!--	TITLE 		-->
					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="5dp"
						android:layout_weight="1"
						android:background="@drawable/border_linear_form"
						android:backgroundTint="@color/theme_2"
						android:gravity="center"
						android:orientation="vertical"
						android:paddingStart="50dp"
						android:paddingEnd="50dp"
						>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/form_title"
							android:textSize="18sp"
							android:textStyle="bold"

							/>

						<EditText
							android:id="@+id/input_title"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:autofillHints="no"
							android:ems="10"
							android:hint="@string/form_hint_empty"
							android:imeOptions="actionDone"
							android:inputType="textPersonName"

							android:textSize="15sp"
							/>

					</LinearLayout>


					<Space
						android:layout_width="match_parent"
						android:layout_height="10dp"
						/>

					<!--	Description		-->


					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="@drawable/border_linear_form"
						android:backgroundTint="@color/theme_2"
						android:gravity="center"
						android:orientation="vertical"
						android:paddingStart="30dp"
						android:paddingEnd="30dp"
						>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/form_description"
							android:textAlignment="center"
							android:textSize="18sp"
							android:textStyle="bold"
							/>

						<EditText
							android:id="@+id/input_description"
							android:layout_width="300dp"
							android:layout_height="wrap_content"
							android:ems="10"
							android:imeOptions="actionDone"
							android:importantForAutofill="no"
							android:inputType="textPersonName"
							android:textSize="15sp"
							/>

					</LinearLayout>


					<Space
						android:layout_width="match_parent"
						android:layout_height="10dp"
						/>


					<!--	Categorie		-->

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="@drawable/border_linear_form"
						android:backgroundTint="@color/theme_2"
						android:gravity="center"
						android:orientation="vertical"
						android:paddingStart="50dp"
						android:paddingEnd="50dp"
						>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/form_categorie"
							android:textAlignment="center"
							android:textSize="18sp"
							android:textStyle="bold"
							/>

						<Spinner
							android:id="@+id/spinnerCategorie"
							style="@style/spinner_style"
							android:layout_width="wrap_content"
							android:layout_height="25dp"
							android:layout_marginBottom="5dp"


							/>

					</LinearLayout>


					<Space
						android:layout_width="match_parent"
						android:layout_height="10dp"
						/>

					<!--	Sets / Repeat  -->
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:baselineAligned="false"
						android:gravity="center"
						android:orientation="horizontal"
						>

						<LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/border_linear_form"
							android:backgroundTint="@color/theme_2"
							android:gravity="center"
							android:orientation="vertical"
							android:paddingStart="10dp"
							android:paddingEnd="10dp"
							>

							<TextView
								android:layout_width="100dp"
								android:layout_height="wrap_content"
								android:text="@string/form_sets"
								android:textAlignment="center"
								android:textSize="18sp"
								android:textStyle="bold"
								/>

							<Spinner

								android:id="@+id/spinnerSets"
								style="@style/spinner_style"
								android:layout_width="wrap_content"
								android:layout_height="25dp"
								android:layout_marginBottom="5dp"

								/>

						</LinearLayout>

						<Space
							android:layout_width="50dp"
							android:layout_height="0dp"
							/>

						<LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/border_linear_form"
							android:backgroundTint="@color/theme_2"
							android:gravity="center"
							android:orientation="vertical"
							android:paddingStart="10dp"
							android:paddingEnd="10dp"
							>

							<TextView
								android:layout_width="100dp"
								android:layout_height="wrap_content"
								android:text="@string/form_repeat"
								android:textAlignment="center"
								android:textSize="18sp"
								android:textStyle="bold"
								/>

							<Spinner

								android:id="@+id/spinnerRepeat"
								style="@style/spinner_style"
								android:layout_width="wrap_content"
								android:layout_height="25dp"
								android:layout_marginBottom="5dp"

								/>

						</LinearLayout>


					</LinearLayout>


					<Space
						android:layout_width="match_parent"
						android:layout_height="10dp"
						/>


					<!--	 Pause / Duree	-->
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:baselineAligned="false"
						android:gravity="center"
						android:orientation="horizontal"
						>


						<LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/border_linear_form"
							android:backgroundTint="@color/theme_2"
							android:gravity="center"
							android:orientation="vertical"
							android:paddingStart="10dp"
							android:paddingEnd="10dp"
							>

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/form_pause"
								android:textAlignment="center"
								android:textSize="18sp"
								android:textStyle="bold"
								/>

							<Spinner
								android:id="@+id/spinnerPause"
								style="@style/spinner_style"
								android:layout_width="wrap_content"
								android:layout_height="25dp"
								android:layout_marginBottom="5dp"

								/>

						</LinearLayout>

						<Space
							android:layout_width="20dp"
							android:layout_height="0dp"
							/>

						<LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/border_linear_form"
							android:backgroundTint="@color/theme_2"
							android:gravity="center"
							android:orientation="vertical"
							android:paddingStart="10dp"
							android:paddingEnd="10dp"
							>

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/form_duree"
								android:textAlignment="center"
								android:textSize="18sp"
								android:textStyle="bold"
								/>

							<Spinner
								android:id="@+id/spinnerDuree"
								style="@style/spinner_style"
								android:layout_width="wrap_content"
								android:layout_height="25dp"
								android:layout_marginBottom="5dp"

								/>

						</LinearLayout>

					</LinearLayout>

					<Space
						android:layout_width="match_parent"
						android:layout_height="10dp"
						/>


					<!--		IMAGE		-->
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginStart="10dp"
						android:layout_marginEnd="10dp"
						android:layout_marginBottom="10dp"
						android:background="@drawable/border_linear_form"
						android:backgroundTint="@color/theme_2"
						android:gravity="center"
						android:orientation="vertical"

						>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="5dp"
							android:text="@string/form_image"
							android:textSize="18sp"
							android:textStyle="bold"
							/>

						<Spinner
							android:id="@+id/spinnerImage"
							style="@style/spinner_style"
							android:layout_width="300dp"
							android:layout_height="25dp"
							android:layout_marginTop="5dp"
							/>

						<ImageView
							android:id="@+id/drawableImage"
							android:layout_width="150dp"
							android:layout_height="150dp"
							android:layout_marginTop="10dp"
							android:layout_marginBottom="10dp"
							android:contentDescription="@string/form_hint_empty"
							android:scaleType="fitXY"
							app:srcCompat="@drawable/abdominaux_crunch_a_la_corde"
							/>

					</LinearLayout>
				</LinearLayout>
			</androidx.cardview.widget.CardView>


		</androidx.constraintlayout.widget.ConstraintLayout>

	</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>